# AesTest

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/konone/aestest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: beauty.aes
app/src/main/cpp/aeskey/: CMakeLists.txt  aeskey.cpp
app/src/main/java/com/konone/aestest/: AESUtil.kt  FileAesActivity.kt  MainActivity.kt  Utils.kt
app/src/main/java/com/konone/aestest/vm/: AesFileViewModel.kt  AesStringViewModel.kt
app/src/main/res/layout/: activity_file.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/konone/aestest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
